tests/integration/features/sdoc/markup/07_anchor_title_unquoted_comma_is_rejected/test.itest
# An unquoted ANCHOR title must not contain a comma.

RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: Could not parse file: {{.*}}input.sdoc. Error: TextXSyntaxError: {{.*}}input.sdoc:6:25: Expected '\](\Z|\r?\n)' => ', Unquoted*, comma ti'
